Ported overhaul to 1.20.2